k8s/kustomize/overlays/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
   section: kurabu
   type: namespace
