k8s/kustomize/overlays/development/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
  labels:
    section: kurabu
    kind: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # defaultBackend:
  #   service:
  #     name: api-service
  #     port:
  #       number: 15000
  rules:
  - host: dev.kurabu.moe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 15000
